# youtube-clickbait-reports

./: .gitignore  README.md  pyproject.toml
docs/: example-output.txt
src/youtube_reports/: __init__.py  __main__.py  cli.py  csv_reader.py  models.py  renderer.py
src/youtube_reports/reports/: __init__.py  base.py  clickbait.py  registry.py
tests/: test_cli.py  test_clickbait_report.py  test_csv_reader.py  test_registry.py  test_renderer.py
