[project]
name = "youtube-clickbait-reports"
version = "0.1.0"
description = "CLI reports for YouTube video metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate>=0.9,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
youtube-reports = "youtube_reports.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
